Revert "Revert "Fix the properties toolbar at the top of the panel so it's always visible.""
This reverts commit e210d2b5809355a334508436d9f128b78338dfd3.

--- a/web/pgadmin/static/css/overrides.css
+++ b/web/pgadmin/static/css/overrides.css
@@ -16,7 +16,7 @@ body {
     width: 100% !important;
 }
 
-.pg-panel-content { position:absolute;top:0px;left:0px;right:0px;bottom:0px; }
+.pg-panel-content { position:absolute;top:0px;left:0px;right:0px;bottom:0px; overflow: hidden; }
 
 /* iFrames should have no border */
 iframe {
@@ -197,6 +197,7 @@ iframe {
 
 .obj_properties {
     padding: 0px;
+    overflow: hidden;
 }
 
 .obj_properties .pgadmin-control .uneditable-input {
@@ -382,7 +383,9 @@ iframe {
 }
 
 .has-pg-prop-btn-group {
-    top: 48px;
+    top: 39px;
+    padding-top: 8px;
+    height: calc(100% - 40px);
 }
 
 .pg-prop-content > div {
